<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">CHATS Field</string>
    <string name="onb_title_1">Simple and Easy</string>
    <string name="onb_title_2">Safe And Secure</string>
    <string name="onb_title_3">Pay Money Instantly</string>
    <string name="onb_desc_1">Easy and straightforward onboarding process</string>
    <string name="onb_desc_2">\"Convexity is and secured to set up encrypted security using Blockchain. \"</string>
    <string name="onb_desc_3">Transfer instantly between vendors and beneficiaries.</string>
    <string name="john">John</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email Address(Optional)</string>
    <string name="example_example_com">example@example.com</string>
    <string name="_081000xxxxx">e.g 81000XXXXX</string>
    <string name="phone">Phone Number</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="identity_verification">Identity Verification</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="next">Next</string>
    <string name="personal_information">Personal Information</string>
    <string name="password">Password</string>
    <string name="connect_scanner">Connect Scanner</string>
    <string name="transaction_pin">Transaction PIN</string>
    <string name="bvn">BVN</string>
    <string name="no_internet">Internet not Available. Data would be sent when network is available.</string>
    <string name="mark_as_completed">Mark as Completed</string>
    <string name="submit_image">Submit Image</string>
    <string name="add_image">Add Image</string>
    <string name="camera_error">Camera Error</string>
    <string name="limit_reached">Limit reached</string>
    <string name="add_more_image">Not enough images set…Add more images</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad architecto asperiores dolorum enim error exercitationem in, laudantium modi, neque numquam odio placeat praesentium, quos totam ullam velit voluptate. Aut autem consequuntur debitis delectus, doloribus esse eveniet ipsum laborum optio praesentium quaerat quia quibusdam quis ratione repellat similique unde veniam voluptatum.</string>
    <string name="submit">Submit</string>
    <string name="submit_task">Submit Task</string>
    <string name="close_your_eyes_for_5_seconds">Close your eyes for 5 seconds</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="input_pin">Pin</string>
    <string name="text_search">Search</string>
    <string name="text_beneficiary_type">Beneficiary Type</string>
    <string name="text_new_beneficiary">New Beneficiary</string>
    <string name="text_existing_beneficiary">Existing Beneficiary</string>
    <string name="text_phone_number">Phone number</string>
    <string name="text_first_name">First name</string>
    <string name="text_last_name">Last name</string>
    <string name="text_email">Email Address</string>
    <string name="text_nin">National Identity Number (NIN)</string>
    <string name="text_search_header">Search by entering any of the user\'s information below</string>
    <string name="text_beneficiary_does_not_exist">Beneficiary does not exist!</string>
    <string name="text_gender">Gender</string>
    <string name="text_campaign">Campaign</string>
    <string name="text_select_a_campaign">Select a Campaign</string>
    <string name="text_search_beneficiary">Search for existing beneficiary</string>
    <string name="empty_cash_for_work">No cash for works</string>
    <string name="text_logged_in">Logged In</string>
    <string name="text_male">Male</string>
    <string name="text_campaigns">Campaigns</string>
    <string name="text_special_case">Special Case</string>
    <string name="text_no">No</string>
    <string name="text_date_of_birth">Date of Birth</string>
    <string name="text_nin_abbrev">vNIN - National Identity</string>
    <string name="text_change_account">Change Account?</string>
    <string name="text_created">Created</string>
    <string name="text_amount">Amount</string>
    <string name="text_load_tasks">Load Tasks</string>
    <string name="text_beneficiaries">Beneficiaries</string>
    <string name="text_cash_for_work">Cash for work</string>
    <string name="text_no_task_found">No Task Found</string>
    <string name="text_select">Select</string>
    <string name="text_report">Report</string>
    <string name="text_status">Status</string>
    <string name="text_no_worker_found">No worker found</string>
    <string name="text_pending_uploads">%s Pending Uploads</string>
    <string name="text_beneficiary_onboarding">Beneficiary Onboarding</string>
    <string name="text_vendor_onboarding">Vendor Onboarding</string>
    <string name="text_logout_button">Logout button</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="text_email_et">Email</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_upload_picture">Upload Picture</string>
    <string name="text_upload_picture_details">Upload a clear picture showing task completion</string>
    <string name="text_terms_and_conditions">By logging in, you agree to our  <b>Terms and Conditions</b> and acknowledge our <b>Privacy Policy</b></string>
    <string name="text_placeholder_date">12/08/2020</string>
    <string name="tryagain">Try again</string>
    <string name="location_not_found">We couldn\'t get your current location</string>
    <string name="nfc_place_nfc_tag_close_to_">Place the NFC Tag close to the device to write data</string>
    <string name="dismiss">Dismiss</string>
    <string name="enable_nfc">Enable NFC</string>
    <string name="nfc_disabled_message">NFC is disabled in settings, please enable it to continue</string>
    <string name="enable">Enable</string>
    <string name="nfc_not_supported">NFC not supported on this device</string>
    <string name="opt_in">Opt in -   <xliff:g example="string" id="title">%1$s</xliff:g> </string>
    <string name="_43_and_above">43 and above</string>
    <string name="whats_your_mother_maiden_name">What is your mother’s maiden name?</string>
    <string name="answer">Answer</string>
    <string name="please_tell_us_how_you_heared_about">\"Please tell us how you heard about this campaign"</string>
    <string name="please_tell_your_mother_maiden_name">Please tell us your mother\'s maiden name</string>
    <string name="please_tell_your_age">Please tell us your age bracket</string>
    <string name="click_here_to_start_scanning">Click here to start scanning</string>
    <string name="text_user_onboarded_success">Beneficiary Onboarded Successfully</string>
    <string name="an_unknown_error_occured">An unknown error occurred</string>
    <string name="please_select_an_option">Please select an option</string>
    <string name="enter_a_value">Enter a value</string>
    <string name="enter_phone_number">enter phone number</string>
    <string name="data_consent_form">Our data privacy policy describes how we collect, use, and protect your personal information when you use our app. By accepting our policy, you acknowledge that you have read and understood its contents, and you agree to the collection, use, and sharing of your personal information as described our policy <a href="https://chats.cash/privacy-policy">Read Here</a>. Please take the time to review our policy carefully before accepting it. If you have any questions or concerns about our data privacy policy, please don\'t hesitate to contact us using the contact information provided in the <a href="https://chats.cash/privacy-policy">policy</a>. According to the Nigerian Data Protection Regulation (NDPR) framework, we are required to obtain your consent to our <a href="https://chats.cash/privacy-policy">data privacy policy.</a> </string>
    <string name="after_reviewing_the_privacy_policy_i_hereby_confirm_that_i_have_read_and_understood_the_terms_and_conditions_outlined_in_the_policy_and_i_consent_to_its_provisions">After reviewing the privacy policy, I hereby confirm that I have read and understood the terms and conditions outlined in the policy, and I consent to its provisions.</string>
    <string name="user_consent_agreement">USER CONSENT AGREEMENT</string>
    <string name="invalid_phone_number">Invalid Phone number</string>
    <string name="take_photo">Take Photo</string>
    <string name="preview_image">preview image</string>
    <string name="retake">Retake</string>
    <string name="select_image">Select Image</string>
    <string name="flip_camera">Flip Camera</string>
    <string name="make_sure_your_face_is_in_the_circle">Make sure your face is in the circle</string>
    <string name="photo_capture_failed">Photo capture failed</string>
    <string name="image_saved">Image saved</string>
    <string name="blink_eyes">Now blink your eyes</string>
    <string name="file_deleted">A required file wasn\'t found or has been deleted, please re-onboard the beneficiary</string>
    <string name="upload_failed">Upload Failed</string>
    <string name="we_need_this_permissoin">Opps, we needed that permission</string>
    <string name="camera">Camera</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="cancel">Cancel</string>
    <string name="camera_permission_desc">We need the camera permission to be able to take pictures with the camera, we just want to capture your face</string>
    <string name="granted">Permission Granted</string>
    <string name="take_below_survey_to_opt_in_to_the_campaign">take below survey to opt in to the campaign</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="upload_valid_id">Upload Valid ID</string>
    <string name="national_id_drivers_license_intl_npassport">National ID, Drivers’ License, Intl.\nPassport</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="upload_a_clear_picture_showing_your_face_navoid_group_picture">Upload a clear picture showing your face.\nAvoid group picture.</string>
    <string name="verify_fingerprint">Verify Fingerprint</string>
    <string name="you_will_be_prompted_to_verify_your_nthumb_index_finger_amp_middle_finger">You will be prompted to verify your\nthumb, index finger &amp; middle finger</string>
    <string name="no_pending_uploads">No pending uploads</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_was_denied_permanently_please_grant_us_permission">Permission was denied permanently, please grant us permission</string>
    <string name="get_started">Get started</string>
    <string name="logging_you_out">Logging you out?</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out</string>
    <string name="nin_verification">NIN Verification</string>
    <string name="register_nin">Register Nin</string>
    <string name="nin_description">To ensure a seamless experience and maintain the highest level of security, we kindly request you to enter your NIN Verification number.</string>
    <string name="how_to_generate_your_virtual_nin_for_kyc">How to generate your Virtual NIN for KYC</string>
    <string name="dial_346_3_customer_nin_696739" translatable="false">￮ Dial *346*3*customer NIN*696739#</string>
    <string name="download_nimc_official_mobile_app">￮ Download NIMC Official mobile app</string>
    <string name="icon">icon</string>
    <string name="enter_national_identification_number">Enter National Identification number</string>
    <string name="hint_enter_nin">Enter NIN</string>
</resources>