<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="0dp"
        android:id="@+id/permission_icon"
        android:padding="30dp"
        android:scaleType="fitCenter"
        android:background="@drawable/cirle_bg_ripple"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        android:layout_marginTop="20dp"
        app:layout_constraintWidth_percent="0.35"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/camera"
        android:src="@drawable/camera_permission_icon"
        app:tint="@color/white" />

    <TextView
        style="@style/TextAppearance.TextSemiBold"
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:text="@string/we_need_this_permissoin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/permission_icon" />

    <TextView
        style="@style/TextAppearance.TextRegular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:id="@+id/desc"
        android:textAlignment="center"
        android:text="@string/we_need_this_permissoin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:id="@+id/accept"
        style="@style/Widget.MaterialComponents.Button.Primary"
        android:text="@string/grant_permission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:id="@+id/decline"
        style="@style/Widget.MaterialComponents.Button.Outline"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/accept"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>