<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="@dimen/defaultDimen"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/defaultDimen"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_check"
        app:tint="@color/colorPrimary" />

    <TextView
        android:id="@+id/title"
        android:text="@string/logging_you_out"
        style="@style/TextAppearance.TextMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/descc"
        style="@style/TextAppearance.TextMedium"
        android:text="@string/are_you_sure_you_want_to_log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dismissButton"
            android:layout_marginTop="@dimen/defaultDimen"
            android:layout_width="match_parent"
            android:textAppearance="@style/TextAppearance.TextMedium"
            android:textStyle="bold"
            app:strokeWidth="2dp"
            android:padding="19dp"
            style="@style/Widget.MaterialComponents.Button.Outline"
            android:layout_height="wrap_content"
            android:text="@string/dismiss" />

    </LinearLayout>

</LinearLayout>
