<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent"
    android:background="@color/def_bg"
    tools:context=".views.auth.ui.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="RtlSymmetry">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enter_nin_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            android:hint="@string/hint_enter_nin"
            app:boxBackgroundColor="#F5F6F8"
            app:layout_constraintTop_toBottomOf="@id/group_name2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enter_nin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:lines="1">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="1dp"
            android:id="@+id/guideline_start"
            app:layout_constraintGuide_begin="@dimen/defaultDimen"
            android:orientation="vertical"
            android:layout_height="wrap_content"/>
        <androidx.constraintlayout.widget.Guideline
            android:layout_width="1dp"
            android:id="@+id/guideline_end"
            app:layout_constraintGuide_end="@dimen/defaultDimen"
            android:orientation="vertical"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/group_name2"
            style="@style/TextAppearance.TextMedium"
            android:textStyle="bold"
            android:textColor="#25396F"
            android:layout_marginTop="@dimen/topSpaceDimen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            android:text="@string/enter_national_identification_number"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/appbar_layout" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/defaultDimen"
            android:background="@drawable/rounded_rect"
            style="@style/ShapeAppearance.Material3.Corner.Medium"
            android:backgroundTint="#FFFDED"
            android:orientation="horizontal"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintTop_toBottomOf="@id/enter_nin_parent">

            <ImageView
                android:layout_width="24dp"
                android:contentDescription="@string/icon"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_info_colored" />

            <Space
                android:layout_width="7dp"
                android:layout_height="0dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.TextMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/how_to_generate_your_virtual_nin_for_kyc"
                    android:textAlignment="center"
                    android:textColor="#3D3704"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title" />

                <TextView
                    style="@style/TextAppearance.TextMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dial_346_3_customer_nin_696739"
                    android:textSize="14sp"
                    android:layout_marginTop="4dp"
                    android:textAlignment="center"
                    android:textColor="#3D3704"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title" />

                <TextView
                    style="@style/TextAppearance.TextMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/download_nimc_official_mobile_app"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    android:textColor="#3D3704"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title" />



            </LinearLayout>

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/ninGetStarted"
            style="@style/ConvexityButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/topSpaceDimen"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@color/white"
                android:paddingVertical="5dp"
                app:navigationIcon="@drawable/ic_back"
                app:title="@string/nin_verification" />

        </com.google.android.material.appbar.AppBarLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
