<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.auth.ui.RegisterImageFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/register_nin" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/def_bg"
            android:orientation="vertical"
            android:padding="@dimen/defaultDimen">


            <ImageView
                android:id="@+id/registerImageView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/nin_verification"
                android:layout_marginTop="70dp"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.5"
                app:srcCompat="@drawable/register_nin_illustration" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ninGetStarted"
                style="@style/ConvexityButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/get_started"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/title"
                style="@style/TextAppearance.TextMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/gilroy_semibold"
                android:text="@string/nin_verification"
                android:textColor="#25396F"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerImageView"
                tools:layout_editor_absoluteX="15dp" />

            <TextView
                android:id="@+id/nin_descriptioon"
                style="@style/TextAppearance.TextMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nin_description"
                android:textAlignment="center"
                android:textColor="#555555"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/topSpaceDimen"
                android:background="@drawable/rounded_rect"
                style="@style/ShapeAppearance.Material3.Corner.Medium"
                android:backgroundTint="#FFFDED"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp"
                android:paddingVertical="16dp"
                app:layout_constraintTop_toBottomOf="@id/nin_descriptioon">

                <ImageView
                    android:layout_width="24dp"
                    android:contentDescription="@string/icon"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_info_colored" />

                <Space
                    android:layout_width="7dp"
                    android:layout_height="0dp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="top"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.TextMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/how_to_generate_your_virtual_nin_for_kyc"
                        android:textAlignment="center"
                        android:textColor="#3D3704"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title" />

                    <TextView
                        style="@style/TextAppearance.TextMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dial_346_3_customer_nin_696739"
                        android:textSize="14sp"
                        android:layout_marginTop="4dp"
                        android:textAlignment="center"
                        android:textColor="#3D3704"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title" />

                    <TextView
                        style="@style/TextAppearance.TextMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/download_nimc_official_mobile_app"
                        android:textSize="14sp"
                        android:textAlignment="center"
                        android:textColor="#3D3704"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title" />



                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>